ContadorDesktop: Agrega interfaz de usuario

--- a/ContadorDesktop/MainWindow.xaml
+++ b/ContadorDesktop/MainWindow.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ContadorDesktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="contador" Height="220" Width="200">
 
-    </Grid>
+    <StackPanel >
+        <Border Margin="16" BorderBrush="LightGray" BorderThickness="2">
+
+            <StackPanel>
+                <Label  Content="conteo:"/>
+                <Label  Margin="4" FontSize="18" Content="0" HorizontalAlignment="Center" x:Name="conteolabel"/>
+                <StackPanel Orientation="Horizontal" Margin="8" HorizontalAlignment="Center">
+                    <Button x:Name="contarButton" Content=" Contar" Margin="4" Padding="0,2" MinWidth="60"  />
+                    <Button x:Name="reiniciarbutton" Content="Reiniciar" Margin="4" Padding="0,2" MinWidth="60" />
+                </StackPanel>
+            </StackPanel>
+        </Border>
+        <Button x:Name="salirbutton" Content="Salir" Margin="16,0" HorizontalAlignment="Right" MinWidth="60" />
+    </StackPanel>
+
+
 </Window>
